{
    "name": "DefaultInputActions",
    "maps": [
        {
            "name": "PlayerActions",
            "id": "66280226-182c-470f-aa0e-b14c49b696e0",
            "actions": [
                {
                    "name": "DiveLeft",
                    "type": "Button",
                    "id": "a93acc43-18f3-4901-81c6-f625f0f6bd2c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DiveRight",
                    "type": "Button",
                    "id": "d0406fa7-b697-4f22-9561-925d43cb640e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5776f85a-177b-4d93-bda5-068d7e0aba03",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DiveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cd010eaa-0ed3-451a-8877-e6a2cc5bd306",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DiveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}